--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "node-telegram-bot-api",
-  "version": "0.40.0",
-  "description": "Telegram Bot API",
+  "name": "node-bale-bot-api",
+  "version": "0.0.1",
+  "description": "Bale Bot API",
   "main": "./index.js",
   "directories": {
     "example": "examples",
     "test": "test"
   },
   "keywords": [
+    "bale",
+    "bale bot",
+    "bale bot api",
     "telegram",
     "telegram bot",
     "telegram bot api",
@@ -15,7 +18,7 @@
   ],
   "scripts": {
     "gen-doc": "echo 'WARNING: `npm run gen-doc` is deprecated. Use `npm run doc` instead.' && npm run doc",
-    "doc": "jsdoc2md --files src/telegram.js --template doc/api.hbs > doc/api.md",
+    "doc": "jsdoc2md --files src/bale.js --template doc/api.hbs > doc/api.md",
     "build": "babel -d ./lib src",
     "prepublishOnly": "npm run build && npm run gen-doc",
     "eslint": "eslint ./src ./test ./examples",
@@ -29,6 +32,8 @@
     "node": ">=0.12"
   },
   "dependencies": {
+    "@types/node": "^13.7.6",
+    "@types/request": "^2.48.4",
     "array.prototype.findindex": "^2.0.2",
     "bl": "^1.2.1",
     "bluebird": "^3.5.1",
@@ -68,12 +73,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yagop/node-telegram-bot-api.git"
+    "url": "https://github.com/iranbots/node-bale-bot-api.git"
   },
   "bugs": {
-    "url": "https://github.com/yagop/node-telegram-bot-api/issues"
+    "url": "https://github.com/iranbots/node-bale-bot-api/issues"
   },
-  "homepage": "https://github.com/yagop/node-telegram-bot-api",
+  "homepage": "https://github.com/iranbots/node-bale-bot-api",
   "contributors": [
     {
       "name": "Oleg",
